src/objects/inscor__Release__c.object
<CustomObject>
    <fields>
        <fullName>Compliance_Request__c</fullName>
        <label>Compliance Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Response__c</fullName>
        <label>Compliance Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Status__c</fullName>
        <label>Compliance Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <formula>Left(Id,8)&amp;&quot;-&quot;&amp; MID(Id, 9, 4)&amp;&quot;-&quot;&amp;Right(Id, 4)&amp;&quot;-&quot;&amp;Left(Id,4)&amp;&quot;-&quot;&amp;Right(CaseSafeID(Id),12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Transaction_Number__c</fullName>
        <label>International Transaction Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Ship_Method__c</fullName>
        <label>Legacy Ship Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receivers_Email__c</fullName>
        <description>Receiver&apos;s Email will hold the email address for which email notification purpose.</description>
        <inlineHelpText>Receiver&apos;s Email</inlineHelpText>
        <label>Receiver&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Release_Invoice_Date_For_Email__c</fullName>
        <formula>Release_Invoice_Date__c +( 10/1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Invoice Date For Email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Release_Invoice_Date__c</fullName>
        <label>Release Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Response__c</fullName>
        <label>Shipment Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZK_CI_Template_ID__c</fullName>
        <formula>CASE( inscor__Ship_Method__r.ZK_Preference__c , &quot;ShippingPreference-000005&quot;, &quot;a3L5Y000002h8ZRUAY&quot;, 
&quot;ShippingPreference-000003&quot;, &quot;a3L5Y000002h8ZWUAY&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZK CI Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZK_DHL_Decl1__c</fullName>
        <formula>&quot;These items are controlled by the U.S. government and authorized for export only to the country of ultimate destination for use by the ultimate consignee or end-user(s) herein identified. They may not be resold, transferred, or otherwise disposed of, to &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZK DHL Decl1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZK_DHL_Decl2__c</fullName>
        <formula>&quot;any other country or to any person other than the authorized ultimate consignee or end-user(s), either in their original form or after&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZK DHL Decl2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZK_DHL_Decl3__c</fullName>
        <formula>&quot;being incorporated into other items, without first obtaining approval from the U.S. government or as otherwise&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZK DHL Decl3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZK_DHL_Signature_Name__c</fullName>
        <formula>$User.FirstName + &apos; &apos; + $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZK DHL Signature Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZK_Vendor__c</fullName>
        <formula>LEFT( inscor__Customer_Vendor__c , 35)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZK Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avszen__Child_Releases__c</fullName>
        <label>Child Releases</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avszen__Service_Type_Name__c</fullName>
        <label>Service Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avszen__Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>zkmulti__MCShipment__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>avszen__ZK_Package_Type__c</fullName>
        <formula>&quot;YOUR_PACKAGING&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZK Package Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avszen__ZK_Service_Type__c</fullName>
        <formula>&quot;FEDEX_GROUND&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZK Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__AOG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AOG?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__AWB__c</fullName>
        <label>AWB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Ship_Address_Name__c</fullName>
        <label>Account Ship Address Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Terms</label>
        <referenceTo>inscor__Account_Terms__c</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Acct__c</fullName>
        <inlineHelpText>If this field is left blank when changing Ship Method then the default Acct # will be filled in automatically.</inlineHelpText>
        <label>Acct #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Bill_Freight_Via__c</fullName>
        <label>Bill Freight Via</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Cust Acct</fullName>
                </value>
                <value>
                    <fullName>SENDER</fullName>
                    <label>On Our Acct</label>
                </value>
                <value>
                    <fullName>THIRD_PARTY</fullName>
                    <label>On 3rd Party Acct</label>
                </value>
                <value>
                    <fullName>On Cust Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Bill_Freight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill Freight?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Changed_After_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changed After Release?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Changed_Reason__c</fullName>
        <label>Changed Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address Change</fullName>
                </value>
                <value>
                    <fullName>Ship Method Change</fullName>
                </value>
                <value>
                    <fullName>Release Line Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Freight_Charge__c</fullName>
        <label>Company Freight Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Freight_Cost__c</fullName>
        <label>Company Freight Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Location</label>
        <referenceTo>inscor__Company_Location__c</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Credit_Status__c</fullName>
        <label>Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Hold</fullName>
                    <default>true</default>
                    <label>No Hold</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Customer_Vendor__c</fullName>
        <formula>IF(ISPICKVAL(inscor__Release_Type__c, &apos;Sales Order&apos;), inscor__Sales_Order__r.inscor__Customer__r.Name,
IF(ISPICKVAL(inscor__Release_Type__c, &apos;Repair Order&apos;), inscor__Repair_Order__r.inscor__Vendor__r.Name ,
IF(ISPICKVAL(inscor__Release_Type__c, &apos;Purchase Order&apos;), inscor__Purchase_Order__r.inscor__Vendor__r.Name ,&apos;&apos;
)))</formula>
        <label>Customer/Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Date_Shipped__c</fullName>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__DropShip_Email__c</fullName>
        <label>DropShip Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>inscor__Drop_Off_Location__c</fullName>
        <label>Drop Off Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Dropship_ATTN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dropship ATTN</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.inscor__Dropship_to_Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Releases (Dropship ATTN)</relationshipLabel>
        <relationshipName>Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Dropship_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dropship Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.inscor__Dropship_to_Account__c</field>
                <operation>equals</operation>
                <valueField>inscor__Account_Ship_Address__c.inscor__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>inscor__Account_Ship_Address__c</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Dropship_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dropship to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Export_Status__c</fullName>
        <label>Export Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Hold</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__External_Comments_rt__c</fullName>
        <label>External Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Freight_Charge__c</fullName>
        <label>Freight Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Freight_Cost__c</fullName>
        <label>Freight Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Generated_Document__c</fullName>
        <label>Generated Document</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Packing Slip</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Hold_Code__c</fullName>
        <inlineHelpText>Select the reason you are putting this release on hold. To remove a hold code, &quot;Ctrl&quot; click the selected code.</inlineHelpText>
        <label>Hold Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Release_Hold_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Incoterms__c</fullName>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Incoterms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments_rt__c</fullName>
        <label>Internal Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Instructions__c</fullName>
        <label>Internal Instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Comments_rt__c</fullName>
        <label>Invoice Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Emailed__c</fullName>
        <label>Invoice Emailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>inscor__Invoice__c</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__OPS_Last_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OPS Last User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Packed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Packing_Slip_Comments_rt__c</fullName>
        <label>Packing Slip Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Paperwork_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paperwork Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Port_Dest__c</fullName>
        <label>Port/Dest</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>inscor__Purchase_Order__c</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA</label>
        <referenceTo>inscor__RMA__c</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Reference_ID__c</fullName>
        <label>Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Release_Company_Value__c</fullName>
        <label>Release Company Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Release_DateTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Release_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Release_Type__c</fullName>
        <label>Release Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Order</fullName>
                    <default>true</default>
                    <label>Sales Order</label>
                </value>
                <value>
                    <fullName>Repair Order</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Release_Value__c</fullName>
        <label>Release Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order</label>
        <referenceTo>inscor__Repair_Order__c</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Requested_Ship_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Requested Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>inscor__Sales_Order__c</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Ship_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If wanting to use the default Acct # when setting/changing Ship Method, make sure that Acct # is blank. If Acct # is filled in then it will not be automatically set.</inlineHelpText>
        <label>Ship Method</label>
        <referenceTo>inscor__Ship_Method__c</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Ship_Terms__c</fullName>
        <label>Ship Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Shipping_Terms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Ship_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Address</label>
        <referenceTo>inscor__Account_Ship_Address__c</referenceTo>
        <relationshipName>Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Shipped_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipped By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Shipped_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipped Method</label>
        <referenceTo>inscor__Ship_Method__c</referenceTo>
        <relationshipName>Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Shipping_Comments__c</fullName>
        <label>Shipping Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Shipping_Instructions__c</fullName>
        <label>Shipping Instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Released</fullName>
                    <default>true</default>
                    <label>Released</label>
                </value>
                <value>
                    <fullName>In_Picking</fullName>
                    <label>In Picking</label>
                </value>
                <value>
                    <fullName>Picked</fullName>
                </value>
                <value>
                    <fullName>In QC</fullName>
                </value>
                <value>
                    <fullName>QCd</fullName>
                </value>
                <value>
                    <fullName>In Shipping</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Street__c</fullName>
        <label>Street</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Tax_Charge__c</fullName>
        <label>Tax Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Weight__c</fullName>
        <label>Total Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Urgency__c</fullName>
        <label>Urgency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>inscor__Work_Order__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__of_Pieces__c</fullName>
        <label># of Pieces</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>Aging</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Customer_Vendor__c</field>
            <operation>contains</operation>
            <value>Aeromedical Evacuation</value>
        </filters>
        <label>Aging</label>
    </listViews>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Date_Shipped__c</columns>
        <columns>inscor__Invoice__c</columns>
        <columns>inscor__Invoice_Number__c</columns>
        <columns>inscor__Release_Value__c</columns>
        <columns>inscor__Sales_Order__c</columns>
        <columns>inscor__Repair_Order__c</columns>
        <columns>inscor__Purchase_Order__c</columns>
        <columns>inscor__Customer_Vendor__c</columns>
        <columns>inscor__Ship_To_Address__c</columns>
        <columns>inscor__Country__c</columns>
        <columns>inscor__Paperwork_Only__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RLS-{0}</displayFormat>
        <label>Release Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>inscor__Dropship_Site_And_Ship_To_Address</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(inscor__Dropship_to_Account__c)) &amp;&amp; NOT(ISBLANK( inscor__Ship_To_Address__c)) &amp;&amp; NOT(ISPICKVAL(inscor__Release_Type__c ,&apos;Repair Order&apos;))</errorConditionFormula>
        <errorMessage>Can not set &quot;Dropship to Account&quot; and &quot;Ship To Address&quot; together.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Hold_cannot_be_true_if_no_hold_codes</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Hold__c = True &amp;&amp; ISBLANK( inscor__Hold_Code__c )</errorConditionFormula>
        <errorMessage>A hold code must be specified when setting Hold? - true</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Hold_code_must_be_blank_if_not_on_hold</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Hold__c = false &amp;&amp; NOT(ISBLANK( inscor__Hold_Code__c ))</errorConditionFormula>
        <errorMessage>Hold codes must be empty when release is not on hold.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Requested_Ship_Date_cannot_be_previous</fullName>
        <active>true</active>
        <errorConditionFormula>AND(PRIORVALUE(inscor__Requested_Ship_Date__c) !=  inscor__Requested_Ship_Date__c, inscor__Requested_Ship_Date__c &lt; today())</errorConditionFormula>
        <errorMessage>Requested Ship date cannot be a previous date</errorMessage>
    </validationRules>
</CustomObject>